# deepfin_clustering

./: .gitignore  README.md  bootstrap.sh  pyproject.toml  requirements.txt
docs/: scatter_test.html
src/deepfin/: __init__.py  clustering.py  feature_extract.py  pipeline.py  preprocessing.py  viz.py
src/deepfin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
