[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deepfin"
version = "0.1.0"
description = "Unsupervised clustering pipeline for fish images"
authors = [{ name = "Alexandru Mihai" }]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.package-dir]
"" = "src"